--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,9 +17,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: Install dependencies
-        run: npm install || echo "Install failed"
+        run: pnpm install || echo "Install failed"
       - name: Build
-        run: npm run build || echo "Build failed"
+        run: pnpm run build || echo "Build failed"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
