--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,9 +17,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - name: install dependencies
-        run: npm install
+        run: pnpm install
       - name: run eslint
-        run: npm run lint
+        run: pnpm run lint
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
